Set/Get global bytecodes
Global objects in Machine
Symbol support in tokenizer
Method inherits from Block
Loader from file and tests

2008-10-13
Update to VS 2008
VS Tests instead NUnit tests
Loader support for subclassing, instance variables,
	and method definition

2008-12-21
Support for [ block ] in compiler and execution block
	(no parameters yet)
Initial .NET object creation and method invocation

2008-12-25
Test loading Library1.st
methods without ^ return self

2008-12-26
Test using Library1.st added

2008-12-27
BaseClass new tests
New bytecodes instSize, instAt: instAt:put:

2008-12-28
IBehavior, IClassDescription added
BaseBehavior, BaseClassDescription added

2009-01-18
Reimplementing .NET object support
New ByteCodes GetDotNetType, NewDotNetObject, InvokeDotNet
StyleCop applied
Send message basicNew as bytecode NewObject
Special treatment for new on Behavior, ClassDescription

2010-07-11
Renaming test methods
Fix ifFalse: using block

2010-07-24
Renaming Tokenizer to Lexer
Renaming Compiler to Parser
New AjTalk.Compiler namespace
New AjTalk.Language namespace
New folders in tests
First EvaluateTests

2010-07-30
NativeBehavior with tests
IBehavior.NewObject returns object instead of IObject
nativeSelf in ExecutionBlock
DotNetObject.SendNativeMethod, .SendNativeStaticMethod with tests
DotNetObject.SendMessage (WIP)
bytecode .Send manage native object or IObject

2010-08-12
subclass:nativeType: support in test, DoesNotUnderstand
new example test NativeBahevior.st
IMetaClass
BaseMetaClass
BaseBehaviorTests
new example test NativeFileInfo.st
BaseIndexedObjectTests
BehabiorDoesNotUnderstandMethod
.Superclass as IBehavior

2010-08-18
class methods support in Loader
new and class in DoesNotUnderstandMethod
new example DefineRectangleWithNewAndInitialize.st
DoesNotUnderstandMethod and BehaviorDoesNotUnderstandMethod now in core, and in Machine
AjTalk.Gui with first Transcript

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/